hphp/hack/test/typecheck/class_refinements/is-expr.php.exp
ERROR: File "is-expr.php", line 11, characters 17-44:
Invalid `is` expression hint (Typing[4195])
  File "is-expr.php", line 11, characters 17-44:
  The `is` operator cannot be used with type refinement
ERROR: File "is-expr.php", line 13, characters 12-52:
Invalid `is` expression hint (Typing[4195])
  File "is-expr.php", line 13, characters 27-51:
  The `is` operator cannot be used with type refinement
